Added Reddit app

--- a/index.html
+++ b/index.html
@@ -167,49 +167,63 @@
     <div id="projects" class="projects">
 
         <div class="row">
+        	<div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://reddit-feed-search.firebaseapp.com/" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/reddit.png"> </a>
+                        <h3>Reddit Feed Search<br> <small>Winter '18</small></h3>
+                        <p class="lead">Made a web application that gives the top posts of a searched subreddit using Reddit API.</p>
+                    </div>
+                </div>
             <div class="col-md-4 text-center">
                     <div class="projects-item">
                         <a href="https://github.com/HaritDivyesh/Vast-Challenge-2011" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/vc2011.png"> </a>
                         <h3>VAST Challenge 2011<br> <small>Fall '17</small></h3>
-                        <p class="lead">Worked on a huge text dataset, looked for trends/patterns and built interactive visualizations to solve the mystery.</p></div>
+                        <p class="lead">Worked on a huge text dataset, looked for trends/patterns and built interactive visualizations to solve the mystery.</p>
+                    </div>
+            </div>
+           <div class="col-md-4 text-center">
+                <div class="projects-item">
+                    <a href="https://sites.google.com/view/web-crawler-cs653" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/webcrawler_2.jpg"> </a>
+                    <h3>Websites vs. Web Crawler<br> <small>Fall '17</small></h3>
+                    <p class="lead">Queried top websites using a custom web crawler I created, as well as Selenium headless Chrome to observe performance and compare results.</p>
                 </div>
-               <div class="col-md-4 text-center">
-                    <div class="projects-item">
-                        <a href="https://sites.google.com/view/web-crawler-cs653" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/webcrawler_2.jpg"> </a>
-                        <h3>Websites vs. Web Crawler<br> <small>Fall '17</small></h3>
-                        <p class="lead">Queried top websites using a custom web crawler I created, as well as Selenium headless Chrome to observe performance and compare results.</p></div>
-                </div>
-                <div class="col-md-4 text-center">
+            </div>
+
+            </div>
+            <div class="row">
+            	<div class="col-md-4 text-center">
                     <div class="projects-item">
                         <a href="Soccer-Results-Prediction-Machine-Learning" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/soccer.jpg"> </a>
                         <h3>Predicting Soccer Results Using Machine Learning<br> <small>Spring '17</small></h3>
                         <p class="lead">Predicted results of future seasons based on past 10 seasons' data, and identified areas for teams to improve that affect results the most.</p>
                     </div>
                 </div>
-
-            </div>
-            <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="projects-item">
                         <a href="https://github.com/HaritDivyesh/memcached-clone-arjun-divyesh-jayanth" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/memo.png"> </a>
                         <h3>Memo: A Memcached Clone<br> <small>Spring '17</small></h3>
-                        <p class="lead">Implemented the Memcached server that includes various memory commands with LRU, Random and Landlord cache replacement policies.</p></div>
+                        <p class="lead">Implemented the Memcached server that includes various memory commands with LRU, Random and Landlord cache replacement policies.</p>
+                    </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="projects-item">
                         <a href="https://github.com/HaritDivyesh/Major-Mutation-Analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/major_2.jpg"> </a>
                         <h3>Standalone Major Mutation Analyzer<br> <small>Fall '16</small></h3>
-                        <p class="lead">Upon providing a program and test suite, the analyzer generates mutants, executes test cases, and produces detailed mutant kill summary.</p></div>
+                        <p class="lead">Upon providing a program and test suite, the analyzer generates mutants, executes test cases, and produces detailed mutant kill summary.</p>
+                    </div>
             </div>
-            <div class="col-md-4 text-center">
-                    <div class="projects-item">
-                        <a href="https://github.com/HaritDivyesh/relay-analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/tor.jpg"> </a>
-                        <h3>Tor Relay Security Analysis<br> <small>Fall '16</small></h3>
-                        <p class="lead">Analyzed factors crucial to security of Tor guard relays, and tried to predict chance of a relay being made guard based on its properties.</p></div> 
-            </div>
+            
     </div>
     <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
+				<div class="col-md-6 text-center">
+				     <div class="projects-item">
+		                <a href="https://github.com/HaritDivyesh/relay-analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/tor.jpg">
+		                </a>
+		                <h3>Tor Relay Security Analysis<br> <small>Fall '16</small></h3>
+		                <p class="lead">Analyzed factors crucial to security of Tor guard relays, and tried to predict chance of a relay being made guard based on its properties.</p>
+				      </div> 
+				</div>
+                <div class="col-md-6 text-center">
                     <div class="projects-item">
                         <a href="https://github.com/HaritDivyesh/EClinic" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/eclinic.png"> </a>
                         <h3>EClinic: A Hospital Management System<br> <small>Fall '14 - Spring '15</small></h3>
