--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 text-center">
-                            <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
+                            <div class="work-item"><a href="http://www.projectfirstsoftware.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
                                 <h3>Project First Software<br> <small>May '17 - October '17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
                             </div>
                         </div>
