--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <div class="row">
                 <div class="col-md-9 text-center" style="margin-left: 12.499999995%;">
                     <h2><i class="fa fa-user fa-3x"></i></h2>
-                    <p class="lead"> I will be working as a Systems/Software Engineer with Hewlett-Packard Enterprise (HPE) starting later this summer.<br>
-                    I'm pursuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> of <a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>.<br>
+                    <p class="lead"> I will be working full time as a Systems/Software Engineer with Hewlett-Packard Enterprise (HPE) starting August 2018. <br>
+                    I graduated with a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> of <a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>.<br>
                     My interest has primarily been Software and Front-End Development.<br>
                     I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
                 </div>
