Em concert update

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="row">
                 <div class="col-md-4 text-center"> <h3><i class="fa fa-futbol-o fa-2x"></i></h3> <p class="lead"> I enjoy playing snooker and love sports; soccer in particular. Manchester United is my team, and it was a dream come true and one thing off the bucket list to watch them live <a href="./img/temp/MU.jpg">this summer!</a></p> </div>
                 <div class="col-md-4 text-center"> <h3><i class="fa fa-cutlery fa-2x"></i></h3> <p class="lead"> I'm a big foodie and had to learn to cook when I came to the US last year. I've gotten quite fond of it, and have really improved over the last year. Experimenting with Indian and American recipies is fun!</p> </div>
-                <div class="col-md-4 text-center"> <h3><i class="fa fa-music fa-2x"></i></h3> <p class="lead"> I'm a big fan of rap music, and Eminem in particular. The clever wordplay and storytelling aspect of his music really appeals to me, and attending his concert is next on my bucket list!</p> </div> <br>
+                <div class="col-md-4 text-center"> <h3><i class="fa fa-music fa-2x"></i></h3> <p class="lead"> I'm a big fan of rap music, and Eminem in particular. The clever wordplay and storytelling aspect of his music really appeals to me, and it was a dream come true to watch him perform live at <a href="./img/Em.jpg">Boston Calling</a> this May!</p> </div> <br>
             </div>
         </div></div>
     <div id="resume-header" class="callout resume"> <div class="vert-text"> <h1 style="color: #4d4d4d">And here's my resumé..</h1><br><br> <a href="Divyesh_Harit_Resume.pdf" class="btn btn-lg btn-default btn-special" target="_blank"> <i class="fa fa-eye fa-2x" style="color: #4d4d4d"></i> </a> </div> </div>
