--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </a>
                 </li>
                 <li>
-                    <a title="Email" class="icon" href="mailto:dharit@umass.edu" target="_blank" data-toggle="tooltip">
+                    <a title="Email" class="icon" href="mailto:divyesh.harit@hpe.com" target="_blank" data-toggle="tooltip">
                         <i class="fa fa-envelope fa-3x"></i>
                     </a>
                 </li>
@@ -201,9 +201,7 @@
                             <br>
                             <small>August '18 - Present</small>
                         </h3>
-                        <p class="lead">I work for HPE's Performance Engineering Team in Wesborough, MA as a Systems/Software Engineer, primarily
-                            working on React and
-                            <a href="http://grommet.io/">Grommet</a>.
+                        <p class="lead">I work for HPE's Performance Engineering Team in Westborough, MA as a Systems/Software Engineer.
                         </p>
                     </div>
                 </div>
