Update career details

--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                     <h2>
                         <i class="fa fa-user fa-3x"></i>
                     </h2>
-                    <p class="lead"> I currently work as a Systems/Software Engineer with Hewlett Packard Enterprise's
+                    <p class="lead"> I currently work as an SDE II with Amazon Web Services (AWS). I have previously worked with as an SDE with Hewlett Packard Enterprise's
                         <a href="https://www.hpe.com/us/en/integrated-systems/simplivity.html">Simplivity Performance Engineering</a> group since August 2018.
-                        <br> I recently graduated with a Masters degree in Computer Science from
+                        <br> I graduated with a Masters degree in Computer Science from
                         <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> of
                         <a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>.
-                        <br> My interest has primarily been Software and Front-End Development.
+                        <br> My interest has primarily been full stack Software Development with a Front-End focus.
                         <br> I graduated with a Bachelor of Engineering in
                         <br>Computer Engineering from
                         <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction.
@@ -193,19 +193,32 @@
             </div>
             <br>
             <div class="row">
+                    <div class="col-md-6 text-center">
+                            <div class="work-item">
+                                <a href="https://aws.amazon.com/" target="_blank">
+                                    <img class="work-icon enlarge-on-hover" src="./img/hp.png" /> </a>
+                                <h3>Amazon Web Services (AWS)
+                                    <br>
+                                    <small>November 2020 - Present</small>
+                                </h3>
+                                <p class="lead">I currenly work for Amazon Web Services in Bellevue, WA as an SDE II.
+                                </p>
+                            </div>
+                        </div>
                 <div class="col-md-6 text-center">
                     <div class="work-item">
                         <a href="https://www.hpe.com/us/en/integrated-systems/simplivity.html" target="_blank">
                             <img class="work-icon enlarge-on-hover" src="./img/hp.png" /> </a>
                         <h3>Hewlett Packard Enterprise
                             <br>
-                            <small>August '18 - Present</small>
+                            <small>August '18 - November 2020</small>
                         </h3>
-                        <p class="lead">I work for HPE's Performance Engineering Team in Westborough, MA as a Systems/Software Engineer.
+                        <p class="lead">I worked for HPE's Performance Engineering Team in Westborough, MA as a Systems/Software Engineer.
                         </p>
                     </div>
                 </div>
 
+            <div class="row">
                 <div class="col-md-6 text-center">
                     <div class="work-item">
                         <a href="http://www.projectfirstsoftware.com/" target="_blank">
@@ -218,35 +231,7 @@
                             STATERA, the company's ERP software that's launching in 2018. </p>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-md-6 text-center">
-                        <div class="work-item">
-                            <a href="http://www.iiitvadodara.ac.in/" target="_blank">
-                                <img class="work-icon enlarge-on-hover" src="./img/iiit.jpg" /> </a>
-                            <h3>Indian Institue of Information Technology, Vadodara
-                                <br>
-                                <small>September'15 - November'15</small>
-                            </h3>
-                            <p class="lead"> I worked under Naveen Kumar, an information security professor at the University. I performed
-                                analysis of cloud computing model architectures proposed in (then) recent research papers
-                                of this area, and helped identify potential security vulnerabilities in these models.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6 text-center">
-                        <div class="work-item">
-                            <a href="http://www.mazconinfotech.com/" target="_blank">
-                                <img class="work-icon enlarge-on-hover" src="./img/mazcon_2.jpg" /> </a>
-                            <h3>Mazcon Infotech
-                                <br>
-                                <small>September '14 - April '15</small>
-                            </h3>
-                            <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and developed
-                                a web-based hospital management system for a local hospital in Ahmedabad, India that was
-                                used there for over a year.</p>
-                        </div>
-                    </div>
-                </div>
+            </div>
             </div>
         </div>
     </div>
