--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="col-md-6 text-center">
                             <div class="work-item">
                                 <a href="https://aws.amazon.com/" target="_blank">
-                                    <img class="work-icon enlarge-on-hover" src="./img/hp.png" /> </a>
+                                    <img class="work-icon enlarge-on-hover" src="./img/aws.jpeg" /> </a>
                                 <h3>Amazon Web Services (AWS)
                                     <br>
                                     <small>November 2020 - Present</small>
